--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body {
 
 .loogo {
   top: 30px;
-  left: 120px;
+  left: 43px;
   position: absolute;
 }
 .nav-a {
@@ -282,7 +282,7 @@ body {
   display: flex;
 }
 .br {
-  width: 100%;
+  width: 725px;
 }
 .paragrf {
   margin-top: 29px;
